--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "18.15.11",
     "@types/react": "18.0.35",
     "@types/react-dom": "18.0.11",
+    "@vercel/analytics": "^0.1.11",
     "autoprefixer": "10.4.14",
     "concurrently": "^8.0.1",
     "contentlayer": "^0.3.1",
