--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
     "tailwindcss": "3.3.1",
     "typescript": "5.0.4",
     "zod": "^3.21.4"
+  },
+  "devDependencies": {
+    "@tailwindcss/typography": "^0.5.9"
   }
 }
