--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
+    "react-tweet": "^2.0.0",
     "rehype-pretty-code": "^0.9.4",
     "shiki": "^0.14.1",
     "tailwind-merge": "^1.12.0",
