--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.17",
     "@types/node": "18.15.11",
     "@types/react": "18.0.35",
@@ -21,6 +22,7 @@
     "date-fns": "^2.29.3",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
+    "github-slugger": "^2.0.0",
     "gray-matter": "^4.0.3",
     "next": "13.3.0",
     "next-contentlayer": "^0.3.1",
@@ -29,7 +31,10 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "react-tweet": "^2.0.0",
+    "rehype-accessible-emojis": "^0.3.2",
+    "rehype-autolink-headings": "^6.1.1",
     "rehype-pretty-code": "^0.9.4",
+    "rehype-slug": "^5.1.0",
     "shiki": "^0.14.1",
     "tailwind-merge": "^1.12.0",
     "tailwindcss": "3.3.1",
