--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -28,3 +28,5 @@ jobs:
           debug: false
           review_simple_changes: false
           review_comment_lgtm: false
+          openai_light_model: gpt-4
+          openai_heavy_model: gpt-4
