New Addition to FastAI + File Parsing (#10)
- added some new notes and some parsing

--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -28,6 +28,6 @@ jobs:
           debug: false
           review_simple_changes: false
           review_comment_lgtm: false
-          # Need GPT-4 access for this
-          # openai_light_model: gpt-4
-          # openai_heavy_model: gpt-4
+          path_filters: |
+            app/**
+            posts/**
