--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "tailwind-merge": "^1.12.0",
     "tailwindcss": "3.3.1",
     "typescript": "5.0.4",
+    "xml-formatter": "^3.4.1",
     "zod": "^3.21.4"
   },
   "devDependencies": {
