Testing the image optimization api

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,6 +32,6 @@
     ".next/types/**/*.ts",
     ".contentlayer/generated",
     "contentlayer.config.ts"
-  ],
+, "next-sitemap.config.js"  ],
   "exclude": ["node_modules"]
 }
