--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "rehype-autolink-headings": "^6.1.1",
     "rehype-pretty-code": "^0.9.4",
     "rehype-slug": "^5.1.0",
+    "remark-gfm": "^3.0.1",
     "shiki": "^0.14.1",
     "tailwind-merge": "^1.12.0",
     "tailwindcss": "3.3.1",
