--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "eslint-config-next": "13.3.0",
     "github-slugger": "^2.0.0",
     "gray-matter": "^4.0.3",
+    "katex": "^0.16.8",
     "next": "13.3.0",
     "next-contentlayer": "^0.3.1",
     "postcss": "8.4.22",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
+    "react-katex": "^3.0.1",
     "react-tweet": "^2.0.2",
     "rehype-accessible-emojis": "^0.3.2",
     "rehype-autolink-headings": "^6.1.1",
