--- a/package.json
+++ b/package.json
@@ -36,8 +36,9 @@
     "gray-matter": "^4.0.3",
     "katex": "^0.16.8",
     "lucide-react": "^0.288.0",
-    "next": "13.3.0",
+    "next": "^13.5.6",
     "next-contentlayer": "^0.3.1",
+    "nextjs": "^0.0.3",
     "postcss": "8.4.22",
     "react": "18.2.0",
     "react-dom": "18.2.0",
