--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
     "@types/node": "18.15.11",
@@ -44,6 +45,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "react-katex": "^3.0.1",
+    "react-spinners": "^0.13.8",
     "react-tweet": "^2.0.2",
     "rehype-accessible-emojis": "^0.3.2",
     "rehype-autolink-headings": "^6.1.1",
