--- a/package.json
+++ b/package.json
@@ -11,12 +11,23 @@
   "dependencies": {
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.17",
+    "@radix-ui/react-alert-dialog": "^1.0.5",
+    "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-context-menu": "^2.1.5",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.5",
     "@types/node": "18.15.11",
     "@types/react": "18.0.35",
     "@types/react-dom": "18.0.11",
     "@vercel/analytics": "^0.1.11",
     "autoprefixer": "10.4.14",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^1.2.1",
+    "cmdk": "^0.2.0",
     "concurrently": "^8.0.1",
     "contentlayer": "^0.3.1",
     "date-fns": "^2.29.3",
@@ -25,13 +36,16 @@
     "github-slugger": "^2.0.0",
     "gray-matter": "^4.0.3",
     "katex": "^0.16.8",
-    "next": "13.3.0",
+    "lucide-react": "^0.288.0",
+    "next": "^13.5.6",
     "next-contentlayer": "^0.3.1",
+    "nextjs": "^0.0.3",
     "postcss": "8.4.22",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "react-katex": "^3.0.1",
+    "react-spinners": "^0.13.8",
     "react-tweet": "^2.0.2",
     "rehype-accessible-emojis": "^0.3.2",
     "rehype-autolink-headings": "^6.1.1",
@@ -39,8 +53,9 @@
     "rehype-slug": "^5.1.0",
     "remark-gfm": "^3.0.1",
     "shiki": "^0.14.1",
-    "tailwind-merge": "^1.12.0",
+    "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.1",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "5.0.4",
     "xml-formatter": "^3.4.1",
     "zod": "^3.21.4"
