--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "concurrently \"contentlayer dev\" \"next dev\"",
     "build": "contentlayer build && next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "build-mdx": "contentlayer dev"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.14",
